--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web-приложени для прохождения психологических тестов</title>
+    <link rel="stylesheet" href="CSS/bootstrap.min.css" />
   </head>
-  <body>
+  <body style="margin-left: 15px">
     <h1>Web-приложени для прохождения психологических тестов</h1>
-    <p>Доступные тесты:</p>
-    <ul>
-      <li><a href="Eysenck\index.html">Личностный опросник Айзенка</a></li>
+    <h4>Доступные тесты:</h4>
+    <ul class="list-group" style="margin-right: 15px">
+      <li
+        class="list-group-item d-flex justify-content-between align-items-center"
+      >
+        <a href="Eysenck\index.html">Личностный опросник Айзенка</a>
+        <button type="button" class="btn btn-info" id="btnResults">
+          Результаты
+        </button>
+      </li>
     </ul>
+
+    <script>
+      document
+        .getElementById("btnResults")
+        .addEventListener("click", function () {
+          location.href = "Eysenck/Results/index.html";
+        });
+    </script>
   </body>
 </html>
